syntax = "proto3";

package pb;

// Represents a single key, used for gets.
message Key {
    string key = 1;
}

// Represents a single value, can be used for put etc.
message Value {
    int64 value = 1;
}

// Represent a key-value pair that is used to return results.
//message KeyValue {
//    string key = 1;
//    int64 value = 2;
//}

// Represent a void message indicating success
message Success {
}

// Represents an error.
message Error {
    string msg = 1;
}

// Represents an empty message
message Empty {}

// Represents an operation result.
message Result {
    repeated string suggestions = 1;
    Success s = 2;
}

// Trie service
service TrieStore {
    // Get the value associated with a key.
    //rpc Init(controlRequest) returns (Empty) {}
    rpc Get (Key) returns (Result) {}
    rpc Set (Key) returns (Result) {}
    //rpc Clear(Empty) returns (Result) {}
}

// Internal representations for operations.
enum Op {
    GET = 0;
    SET = 1;
    CLEAR = 2;
}

// A type for arguments across all operations
message Command {
    Op operation = 1;
    oneof arg {
        Key get = 2;
        Key set = 3;
        Empty clear = 4;
    }
}
// Client to primary
message updateTrieRequest {
    string word = 1;	
}

message lookupTrieRequest {
	string prefix = 1;
}


message lookupTrieReply {
	//repeated string result = 1;
	int64 result = 1;
	bool success = 2;
}
// Primary to secondary
message updateSecondaryTrieRequest{
	string word = 1;
	int64 requestNumber = 2;
}

message updateSecondaryTrieReply{
	int64 requestNumber = 1;
	bool success = 2;
	string peer = 3;
}

message controlRequest{
	int64 requestNumber = 1;
	string primaryId = 2;
}

message portIntroInfo{
    string replId = 1;
}

message ackIntroInfo{
    bool success = 1;
}

message heartbeatMessage{
}


message heartbeatAckArg{
    portIntroInfo key = 1;
    int64 val = 2;
}

message heartbeatAckMessage{
    portIntroInfo id = 1;
    repeated heartbeatAckArg table = 2;
}

message secondaryList{
    repeated portIntroInfo secondaries = 1;
    int64 requestNumber = 2;
}





// Replication service
service Repl {
    rpc AckIntroduction(ackIntroInfo) returns (Empty) {} // Ack for Introduce StandBy
	rpc UpdateSecondary(updateSecondaryTrieRequest) returns (Empty)	{} // Updating Secondary Trie Node with singke query
	rpc AckPrimary(updateSecondaryTrieReply) returns (Empty) {} // Ack from Secondary to Primary for trie update

    rpc Heartbeat(heartbeatMessage) returns (Empty) {} // Heartbeat from Manager to Primary

    rpc MakePrimary(secondaryList) returns (Empty) {}
    rpc MakeSecondary(portIntroInfo) returns (Empty) {}
}

//Manager Service
service Manager {

    rpc IntroduceSelf(portIntroInfo) returns (Empty) {} // Introduce standby to manager
    rpc HeartbeatAck(heartbeatAckMessage) returns (Empty) {} // Ack for heartbeat from primary to manager

}
